--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     </head>
     <body>
         <header>Concentration</header>
+        <div id="board">
+
+        </div>
+        <div id="scores">
+
+        </div>
     </body>
 </html>
