--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <script src="" async defer></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
         <header>Concentration</header>
