--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 
         </div>
         <div id="scores">
-
+            <div id="p1" class="player-box">
+                <h5>Player 1</h5>
+                <div id="p1-score" class="player-score"></div>
+            </div>
+            <div id="p2" class="player-box">
+                <h5>Player 2</h5>
+                <div id="p2-score" class="player-score"></div>
+            </div>
         </div>
     </body>
 </html>
