--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
         </div>
         <div id="scores">
-            <div id="p0" class="player-box">
+            <div id="player-0" class="player-box">
                 <h5>Player 1</h5>
-                <div id="p0-score" class="player-score"></div>
+                <div id="score-0" class="player-score"></div>
             </div>
-            <div id="p1" class="player-box">
+            <div id="player-1" class="player-box">
                 <h5>Player 2</h5>
-                <div id="p1-score" class="player-score"></div>
+                <div id="score-1" class="player-score"></div>
             </div>
         </div>
     </body>
