Added CSS for active player, added visible win message

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <h5>Player 2</h5>
                 <div id="score-1" class="player-score"></div>
             </div>
+            <p id="win-message"></p>
         </div>
     </body>
 </html>
