Added styling for header shadow

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <header>Concentration</header>
+        <header class="text-outline">Concentration</header>
         <div id="board">
 
         </div>
