Changed site colors (again)

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         </div>
         <div id="scores">
             <div id="player-0" class="player-box">
-                <h5>Player 1</h5>
+                <p>Player 1</p>
                 <div id="score-0" class="player-score"></div>
             </div>
             <div id="player-1" class="player-box">
-                <h5>Player 2</h5>
+                <p>Player 2</p>
                 <div id="score-1" class="player-score"></div>
             </div>
             <p id="win-message"></p>
