Fixed win message styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
         <header class="text-outline">Concentration</header>
+        <p id="win-message" hidden></p>
         <div id="board">
 
         </div>
@@ -23,7 +24,6 @@
                 <p>Player 2</p>
                 <div id="score-1" class="player-score"></div>
             </div>
-            <p id="win-message"></p>
         </div>
     </body>
 </html>
