Reworked winner-determining functionality, added .player--winner class w/ color, changed player-box shape

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class="text-outline">Concentration</header>
-        <p id="win-message" hidden></p>
+        <p id="win-message" class="popup" hidden></p>
         <div id="board">
 
         </div>
