Changed README name again

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <body>
         <header class="text-outline">Concentration</header>
         <p id="win-message" class="popup" hidden></p>
+        <div id="playagain" class="popup">
+            <p id="playagain-message">Play again?</p>
+        </div>
         <div id="board">
 
         </div>
