Added play again button w/ basic styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </head>
     <body>
         <header class="text-outline">Concentration</header>
-        <p id="win-message" class="popup" hidden></p>
-        <div id="playagain" class="popup">
-            <p id="playagain-message">Play again?</p>
+        <div id="postgame-popup" class="popup">
+            <p id="win-message" class="popup" hidden></p>
+            <p id="playagain" class="popup" hidden>🔄</p>
         </div>
         <div id="board">
 
