Fixed #play-again button (by resetting activeSet per setActiveSet() call)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="text-outline">Concentration</header>
         <div id="postgame-popup" class="popup">
             <p id="win-message" class="popup" hidden></p>
-            <p id="play-again" class="popup">🔄</p>
+            <p id="play-again" class="popup" hidden>🔄</p>
         </div>
         <div id="board">
 
