Added #menu div

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     </head>
     <body>
         <header class="text-outline">Concentration</header>
+        <div id="menu">
+            
+        </div>
         <div id="postgame-popup" class="popup">
             <p id="win-message" class="popup" hidden></p>
             <p href="" id="play-again" class="popup" hidden>🔄</p>
