--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <body>
         <header class="text-outline">Concentration</header>
         <div id="menu">
-            
+            <div id="menu-button-list">
+                <p id="start-game-button" class="menu-button">Start game</p>
+            </div>
         </div>
         <div id="postgame-popup" class="popup">
             <p id="win-message" class="popup" hidden></p>
