Fixed reset bug (was forced to beginGame() twice, breaking the game)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div id="postgame-popup" class="popup">
             <p id="win-message" class="popup" hidden></p>
-            <p href="" id="play-again" class="popup" hidden>🔄</p>
+            <p id="play-again" class="popup" hidden>🔄</p>
         </div>
         <div id="board">
 
