--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="menu">
             <div id="menu-button-list">
                 <p id="start-game-button" class="menu-button">Start game</p>
+                <p id="select-set-button" class="menu-button">Sets</p>
             </div>
         </div>
         <div id="postgame-popup" class="popup">
