Added (not functioning) #sets-menu modal, fixed var accessing bug, put setActiveSet(animals) outside beginGame() so later implementation of activeSet setting works

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <p id="select-set-button" class="menu-button">Sets</p>
             </div>
         </div>
+        <div id="sets-menu" class="modal" hidden>
+
+        </div>
         <div id="postgame-popup" class="popup">
             <p id="win-message" class="popup" hidden></p>
             <p id="play-again" class="popup" hidden>🔄</p>
