Gave #sets-menu modal a container + proper sizing

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
                 <p id="select-set-button" class="menu-button">Sets</p>
             </div>
         </div>
-        <div id="sets-menu" class="modal" hidden>
+        <div id="sets-menu-container" class="modal-container" hidden>
+            <div id="sets-menu" class="modal">
 
+            </div>
         </div>
         <div id="postgame-popup" class="popup">
             <p id="win-message" class="popup" hidden></p>
