Added #close-modal-button for #sets-menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
         <div id="sets-menu-container" class="modal-container" hidden>
             <div id="sets-menu" class="modal">
-
+                <div id="close-modal-button-container">
+                    <div id="close-modal-button">x</div>
+                </div>
             </div>
         </div>
         <div id="postgame-popup" class="popup">
